<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mazarin Movie Solution</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_movie">Add a Movie</string>
    <string name="list_movie">List of Movies</string>
    <string name="name">Name : </string>
    <string name="genre">Genre : </string>
    
    <string name="details">Details</string>
     <string name="rel_year">Release Year : </string>
     <string name="cast">Cast : </string>
     <string name="rating">Ratings : </string>
     <string name="content_desc">content</string>
     
     <string name="ok">Ok</string>
     
     <string name="mov_name">Movie Name</string>
     <string name="mov_year">Movie Year</string>
     <string name="fiction">Fiction</string>
     <string name="gen">Genre</string>
     <string name="casts">Cast</string>
     <string name="add">Add</string>
     <string name="save">Save</string>

</resources>
