<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_above="@+id/save_movie" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <EditText
                android:id="@+id/edt_mov_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_field_name"
                android:hint="@string/mov_name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/theme_blue"
                android:textSize="16sp" >
            </EditText>

            <EditText
                android:id="@+id/txt_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_text_field_name"
                android:gravity="center_vertical"
                android:hint="@string/mov_year"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/theme_blue"
                android:textSize="16sp"
                android:maxLength="4" >
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_text_field_name"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/fiction"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/theme_blue"
                    android:textSize="16sp" >
                </TextView>

                <CheckBox
                    android:id="@+id/chk_fiction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_text_field_name"
                android:gravity="center_vertical"
                android:hint="@string/gen"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/theme_blue"
                android:textSize="16sp" >
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_cast"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_text_field_name"
                    android:hint="@string/casts"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/theme_blue"
                    android:textSize="16sp" >
                </EditText>

                <Button
                    android:id="@+id/btn_add_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@color/theme_blue"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cast_lay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="5dp" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />

                <ImageView
                    android:id="@+id/star10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_star_red" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_movie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/theme_blue"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/save"
        android:layout_marginTop="20dp" />

</RelativeLayout>